# rust-daily-cron

./: Cargo.toml  README.md  lambda.json  makefile
src/: main.rs
