[package]
name = "rust-daily-cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^2"
reqwest = { version = "0.11", default_features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"